# heroes3-template-util

./: .gitignore  LICENSE  README.md  h3tc-editor.spec  launcher.py  pyproject.toml
.github/workflows/: release.yml
docs/: format_reference.md
src/h3tc/: __main__.py  cli.py  constants.py  enums.py  formats.py  models.py
src/h3tc/converters/: hota18_to_hota.py  hota_to_hota18.py  hota_to_sod.py  sod_to_hota.py
src/h3tc/editor/: __init__.py  constants.py  convert_dialog.py  main_window.py  theme_dialog.py
src/h3tc/editor/canvas/: connection_item.py  icons.py  layout.py  scene.py  view.py  zone_item.py
src/h3tc/editor/panels/: binding.py  (+4 more)
src/h3tc/parsers/: base.py  hota.py  hota18.py  sod.py
src/h3tc/writers/: base.py  hota.py  hota18.py  sod.py
templates/: hota_complex_pack.h3t  jebus_converted.h3t  orig_converted.h3t  orig_converted_11town.h3t
templates/hota_complete/: 1deaL.h3t  2sm2c(2).h3t  2sm4d(3).h3t  6lm10a.h3t  8mm6a.h3t  8xm12a.h3t  Anarchy.h3t  Apocalypse.h3t  Black'n'Blue.h3t  Boomerang.h3t  Clash of Dragons.h3t  Diamond.h3t  Duel.h3t  Firewalk.h3t  Jebus Cross.h3t  Kerberos.h3t  Long Run 2v2.h3t  Mini-Nostalgia.h3t  New Long run 2v2.h3t  Nine-day Wonder.h3t  Nostalgia.h3t  Original template pack.h3t  Skirmish(M).h3t  Spider.h3t  h3dm1.h3t  mt_Andromeda.h3t  mt_Antares.h3t  mt_Diamond.h3t  mt_Firewalk.h3t  mt_Jebus Native.h3t  mt_Jebus.h3t  mt_TeamJebus.h3t
tests/: conftest.py  test_hota18.py  test_hota_to_sod.py  test_reid_chaos.py  test_reid_duplicates.py  test_reid_topology.py  test_roundtrip.py  test_sod_parser.py  test_sod_to_hota.py
(+3 files in other folders)
